# Vai

./: .gitignore  Markdown Extensions _ VitePress.html  README.md  config.py  config.yaml  example.md  gemini.html  grok.html  header_config.py  header_config.yaml  improved.html  index.html  layout.html  layout_jinja.html  main.py  output.html  pygments-dark.css  pygments-light.css  pypi_release_commands.txt  pyproject.toml  requirements.txt  script.js  search-index.json  ssg_logic.py  style.css  test.html  test.py  test2.html
.github/workflows/: github-actions-demo.yml  nautikia-binaries.yml  publish-to-pypi.yml
docs/: config.toml  config.yaml  header_config.yaml  index.html  search_index.json  ssg_logic.py  test.html
docs/asd/: index.html
docs/asd/mom/: index.html
docs/asd/mother/: index.html
docs/asd/wtr/: index.html
docs/even-more/: index.html
docs/even-more/more/: index.html
docs/guides/: index.html
docs/guides/site-config/: index.html
docs/guides/zite-config-2/: index.html
docs/md_tests/: index.html
docs/md_tests/chatgpt/: index.html
docs/md_tests/test/: index.html
docs/reference/: index.html
docs/reference/mom/: index.html
docs/src/: README.md
docs/src/1-Asd/: 1-wtr.md  2-mother.md
docs/src/1-Guides/: 1-zite config 2.md
docs/src/2-Guides/: site config 2.md
docs/src_html/: index.html  search_index.json
docs/src_html/asd/: index.html
docs/src_html/asd/mom/: index.html
docs/src_html/even-more/more/: index.html
docs/src_html/further-customisation/: index.html
docs/src_html/further-customisation/html-structure/: index.html
docs/src_html/further-customisation/javascript-logic/: index.html
docs/src_html/further-customisation/scriptjs/: index.html
docs/src_html/further-customisation/stylecss/: index.html
docs/src_html/further-customisation/styling/: index.html
docs/src_html/guides/site-config/: index.html
docs/src_html/guides/zite-config-2/: index.html
docs/src_html/introduction/deploy/: index.html
docs/src_html/introduction/getting-started/: index.html
docs/src_html/introduction/markdown-syntax/: index.html
docs/src_html/md_tests/chatgpt/: index.html
docs/src_html/reference/: index.html
docs/src_html/static/: style.css
docs/src_html/statics/: index.html
docs/src_html/welcome/welcome/: index.html
docs/src_md/: README.md
docs/src_md/1-Introduction/: 1-What is Vai.md  2-Getting Started.md  3-Markdown Syntax.md  4-Deploy.md
docs/src_md/1-Welcome/: 1-welcome.md
docs/src_md/2-Further Customisation/: 1-HTML Structure.md  2-Style.css.md  2-Styling.md  3-Javascript Logic.md
docs/src_md/2-Guides/: 1-zite config 2.md
docs/src_md/4-statics/: test.md
docs/src_md/md_tests/: test.md
docs/static/: script.js  style.css
docs/statics/: index.html
docs/statics/test/: index.html
docs/templates/: layout.html  layout_no_header.html
docs_dev/: header_config.yaml
docs_dev/src/1-Asd/: 1-wtr.md
docs_dev/src/even more/: more.md
docs_dev/src/md_tests/: chatgpt.md
docs_dev/static/: style.css
docs_dev/templates/: layout.html  layout_no_header.html
src/1-Guides/: 1-zite config 2.md
src/2-Asd/: 1-wtr.md
src/2-Guides/: 1-zite config 2.md
src/3-Reference/: mom.md
static/: style.css
templates/: layout.html  layout_no_header.html
test/: index.html  test.md  test.py
test-the-docs/docs/: search_index.json
test-the-docs/docs/asd/mom/: index.html
test-the-docs/docs/asd/wtr/: index.html
test-the-docs/docs/guides/: index.html
test-the-docs/docs/introduction/: index.html
test-the-docs/docs/md_tests/: index.html
test-the-docs/docs/statics/: index.html
vai/: main.py
vai/package_defaults/: header_config.yaml
vai/package_defaults/static/: script.js  style.css
vai/package_defaults/templates/: layout_no_header.html
(+3 files in other folders)
