[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vai"
version = "0.1.0"
description = "A static site generator for Markdown documentation."
readme = "README.md" # Optional: if you have a README.md
requires-python = ">=3.8"
license = { text = "MIT" } # Optional: Add a license
authors = [
    { name = "Your Name", email = "your.email@example.com" } # Optional
]
classifiers = [ # Optional: Helps PyPI categorize your package
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "beautifulsoup4>=4.12,<5.0",
    "Jinja2>=3.1,<3.2",
    "livereload>=2.6,<2.8",
    "Markdown>=3.5,<3.9", # Using Markdown 3.x, as 4.x can have breaking changes
    "MarkupSafe>=2.1,<2.2",
    "minify_html>=0.14,<0.17",
    "Pygments>=2.17,<2.20",
    "PyYAML>=6.0,<6.1",
    "rcssmin>=1.1,<1.3",
    "rjsmin>=1.2,<1.3",
]

[project.scripts]
vai = "vai.main:main"

[tool.setuptools]
include-package-data = true
packages = ["vai"]  # <--- MOVED HERE! This is the correct place.

# The [tool.setuptools.packages.find] section is removed as we are explicitly listing 'packages' above.
# If you had a src layout or more complex package discovery needs, you would use 'find' instead of explicitly listing 'packages'.

[tool.setuptools.package-data]
# Files are relative to the package directory (vai/)
# We need to include everything inside the 'package_defaults' subdirectory
vai = [
    "package_defaults/header_config.yaml",
    "package_defaults/static/*",
    "package_defaults/static/**/*",
    "package_defaults/templates/*",
    "package_defaults/templates/**/*"
]