[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vai"
version = "0.1.0"
description = "A static site generator made in python."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["python", "python3", "fast", "static site generator", "ssg"]
authors = [
    { name = "Naresh", email = "nareshix66@gmail.com" }
]
maintainers = [
  {name = "Naresh", email = "nareshix66@gmail.com"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Static Site Generators",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Documentation",
]

dependencies = [
    "beautifulsoup4>=4.12,<5.0",
    "Jinja2>=3.1,<3.2",
    "livereload>=2.6,<2.8",
    "Markdown>=3.5,<3.9",
    "MarkupSafe>=2.1,<2.2",
    "minify_html>=0.14,<0.17",
    "Pygments>=2.17,<2.20",
    "PyYAML>=6.0,<6.1",
    "rcssmin>=1.1,<1.3",
    "rjsmin>=1.2,<1.3",
]

[project.scripts]
vai = "vai.main:main"

[tool.setuptools]
include-package-data = true
packages = ["vai"]

[tool.setuptools.package-data]
vai = [
    "package_defaults/header_config.yaml",
    "package_defaults/static/**",
    "package_defaults/templates/**"
]